# comlink

./: .gitignore  Makefile  comlink  comlink.cabal
deb/DEBIAN/: control  postinst  preinst  prerm
deb/etc/sv/comlink/: run
deb/etc/sv/comlink/log/: run
src/: Main.hs
src/Comlink/: Types.hs
