name:                  comlink
version:               0.1.0
synopsis:              IRC Notifications
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              IRC, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/comlink.git

executable comlink
    default-language: Haskell2010
    hs-source-dirs:    src
    main-is:           Main.hs
    ghc-options:
        -threaded
        -Wall
        -O2
        -fwarn-tabs
        -funbox-strict-fields
        -with-rtsopts=-N

    build-depends:
        base
      , bytestring
      , http-types
      , lens
      , simpleirc
      , snap
      , snap-core
      , snap-predicates < 0.4
      , snap-server
      , split
